let's pause this for now, too complicated to integrate hada

--- a/notebooks/sustainable-hardware-dimensioning.ipynb
+++ b/notebooks/sustainable-hardware-dimensioning.ipynb
@@ -960,11 +960,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "48e1b528-e02f-4704-87d2-0b472a19d22d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'core' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m models_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/models\u001b[39m\u001b[38;5;124m'\u001b[39m  \u001b[38;5;66;03m# trained ML models path\u001b[39;00m\n\u001b[1;32m     10\u001b[0m db \u001b[38;5;241m=\u001b[39m ConfigDB\u001b[38;5;241m.\u001b[39mfrom_local(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/configs\u001b[39m\u001b[38;5;124m'\u001b[39m)  \u001b[38;5;66;03m# ML models configurations\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m datasets \u001b[38;5;241m=\u001b[39m \u001b[43mcore\u001b[49m\u001b[38;5;241m.\u001b[39mdatasets\u001b[38;5;241m.\u001b[39mDatasets\u001b[38;5;241m.\u001b[39mfrom_local(db, data_path)\n\u001b[1;32m     12\u001b[0m models \u001b[38;5;241m=\u001b[39m MLModels(db, datasets, models_path)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# ==============================================================================\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Utility functions\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# ==============================================================================\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'core' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "# from flask import Flask, request, session, render_template, jsonify\n",
+    "\n",
+    "# ==============================================================================\n",
+    "# Init HADA\n",
+    "# ==============================================================================\n",
+    "data_path = '../data/'  # data of benchmark ML models execution\n",
+    "models_path = '../data/models'  # trained ML models path\n",
+    "db = ConfigDB.from_local('../data/configs')  # ML models configurations\n",
+    "datasets = core.datasets.Datasets.from_local(db, data_path)\n",
+    "models = MLModels(db, datasets, models_path)\n",
+    "\n",
+    "# ==============================================================================\n",
+    "# Utility functions\n",
+    "# ==============================================================================\n",
+    "def run_hada(optimization_request):\n",
+    "    var_bounds = datasets.get_var_bounds_all(optimization_request)  # get variable upper and lower bounds\n",
+    "    robust_coeff = datasets.get_robust_coeff(models, optimization_request)  # get robustness coefficients\n",
+    "\n",
+    "    solution = hada(db, optimization_request, models, var_bounds, robust_coeff)  # obtain solution\n",
+    "    return solution\n",
+    "\n",
+    "\n",
+    "def parse_request_form(algorithm, form_dict):\n",
+    "    # def sanitize_float(x):\n",
+    "    #    return None if x == '' else float(x)\n",
+    "    def sanitize_field(x):\n",
+    "        if x == '':\n",
+    "            return None\n",
+    "        try:\n",
+    "            x = float(x)\n",
+    "        except ValueError as e:\n",
+    "            pass\n",
+    "\n",
+    "        return x\n",
+    "\n",
+    "    user_constraints = UserConstraints(db, algorithm)\n",
+    "    for target in db.get_targets(algorithm):\n",
+    "        if form_dict[f'constraint_{target}'] != '':\n",
+    "            user_constraints.add_constraint(target,\n",
+    "                                            form_dict[f'constraint_{target}_type'],\n",
+    "                                            sanitize_field(form_dict[f'constraint_{target}']))\n",
+    "\n",
+    "    hws_prices = HardwarePrices(db, algorithm)\n",
+    "    for hw in db.get_hws(algorithm):\n",
+    "        price = sanitize_field(form_dict[f'price_{hw}'])\n",
+    "        hws_prices.add_hw_price(hw, price)\n",
+    "\n",
+    "    optimization_request = OptimizationRequest(db=db,\n",
+    "                                               algorithm=algorithm,\n",
+    "                                               target=form_dict['target'],\n",
+    "                                               opt_type=form_dict['objective_type'],\n",
+    "                                               robustness_fact=sanitize_field(form_dict['robust_factor']),\n",
+    "                                               user_constraints=user_constraints,\n",
+    "                                               hws_prices=hws_prices)\n",
+    "\n",
+    "    return optimization_request\n",
+    "\n",
+    "\n",
+    "def parse_request_json(data):\n",
+    "    \"\"\"\n",
+    "    Example:\n",
+    "    {\n",
+    "        \"algorithm\":\"fwt\",\n",
+    "        \"robustness_fact\": null,\n",
+    "        \"objective\": {\"target\":\"memory\", \"type\": \"min\"},\n",
+    "        \"constraints\": [\n",
+    "            {'target': 'time', 'type': 'leq', value: 120},\n",
+    "            ...\n",
+    "        ],\n",
+    "        price_per_hw: [\n",
+    "            {'hw':'pc', price: 30},\n",
+    "            ...\n",
+    "        ]\n",
+    "    }\n",
+    "    \"\"\"\n",
+    "    user_constraints = UserConstraints(db, data['algorithm'])\n",
+    "    for constraint in data['constraints']:\n",
+    "        user_constraints.add_constraint(constraint['target'],\n",
+    "                                        constraint['type'],\n",
+    "                                        constraint['value'])\n",
+    "\n",
+    "    hws_prices = HardwarePrices(db, data['algorithm'])\n",
+    "    if 'price_per_hw' in data:\n",
+    "        for hw_price in data['price_per_hw']:\n",
+    "            hws_prices.add_hw_price(hw_price['hw'], hw_price['price'])\n",
+    "\n",
+    "    optimization_request = OptimizationRequest(db=db,\n",
+    "                                               algorithm=data['algorithm'],\n",
+    "                                               target=data['objective']['target'],\n",
+    "                                               opt_type=data['objective']['type'],\n",
+    "                                               robustness_fact=data['robustness_fact'],\n",
+    "                                               user_constraints=user_constraints,\n",
+    "                                               hws_prices=hws_prices)\n",
+    "    return optimization_request\n",
+    "\n",
+    "\n",
+    "def format_solution(solution):\n",
+    "    sol_hw = {'hw': solution.chosen_hw}\n",
+    "    sol_hyperparams = {hyperparam: val for hyperparam, val in solution.hyperparams_values.items()}\n",
+    "    sol_targets = {target: val for target, val in solution.targets_values.items()}\n",
+    "    out = {**sol_hw, **sol_hyperparams, **sol_targets}\n",
+    "\n",
+    "    return out\n",
+    "\n",
+    "\n",
+    "# ==============================================================================\n",
+    "# Routes (GUI)\n",
+    "# ==============================================================================\n",
+    "@app.route('/', methods=['GET', 'POST'])\n",
+    "def hada_gui():\n",
+    "    out = None\n",
+    "    if 'last_selected_algo' not in session:\n",
+    "        session['last_selected_algo'] = db.get_algorithms()[0]\n",
+    "    try:\n",
+    "        # two separate forms, one for algorithm selection and one for optimization requests\n",
+    "        if request.method == 'POST':\n",
+    "            form_dict = request.form.to_dict()\n",
+    "\n",
+    "            if form_dict['form_id'] == 'select_algo':\n",
+    "                session['last_selected_algo'] = form_dict['algorithm']\n",
+    "            if form_dict['form_id'] == 'optimize':\n",
+    "                optimization_request = parse_request_form(session['last_selected_algo'], form_dict)\n",
+    "                solution = run_hada(optimization_request)\n",
+    "\n",
+    "                if solution:\n",
+    "                    out = format_solution(solution)\n",
+    "                else:\n",
+    "                    out = 'No solution.'\n",
+    "\n",
+    "        # rendering\n",
+    "        lb_per_var, ub_per_var = datasets.extract_var_bounds(session['last_selected_algo'])\n",
+    "        description_per_var = db.get_description_per_var(session['last_selected_algo'])\n",
+    "        rendering_kwargs = {'algorithms': db.get_algorithms(),\n",
+    "                            'targets': db.get_targets(session['last_selected_algo']),\n",
+    "                            'price_per_hw': db.get_prices_per_hw(session['last_selected_algo']),\n",
+    "                            'lb_per_var': lb_per_var,\n",
+    "                            'ub_per_var': ub_per_var,\n",
+    "                            'description_per_var': description_per_var}\n",
+    "        session['last_rendering_kwargs'] = rendering_kwargs\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        out = str(e)\n",
+    "        return render_template('hada_gui.html',\n",
+    "                               **session['last_rendering_kwargs'],\n",
+    "                               selected_algo=session['last_selected_algo'],\n",
+    "                               out=out)\n",
+    "\n",
+    "    return render_template('hada_gui.html',\n",
+    "                           **rendering_kwargs,\n",
+    "                           selected_algo=session['last_selected_algo'],\n",
+    "                           out=out)\n",
+    "\n",
+    "\n",
+    "# ==============================================================================\n",
+    "# Routes (API)\n",
+    "# ==============================================================================\n",
+    "@app.route('/algorithms', methods=['GET'])\n",
+    "def get_algorithms():\n",
+    "    return jsonify({'algorithms': db.get_algorithms()})\n",
+    "\n",
+    "\n",
+    "@app.route('/algorithms/<algorithm>', methods=['GET'])\n",
+    "def get_algo_info(algorithm):\n",
+    "    hyperparams = db.get_hyperparams(algorithm)\n",
+    "    targets = db.get_targets(algorithm)\n",
+    "    description_per_var = db.get_description_per_var(algorithm)\n",
+    "    lb_per_var, ub_per_var = datasets.extract_var_bounds(algorithm)\n",
+    "    lb_per_var['price'] = None\n",
+    "    ub_per_var['price'] = None\n",
+    "    description_per_var['price'] = None\n",
+    "\n",
+    "    hyperparams_with_bounds_and_desc = {hyperparam: {'description': description_per_var[hyperparam],\n",
+    "                                                     'lb': lb_per_var[hyperparam],\n",
+    "                                                     'ub': ub_per_var[hyperparam]}\n",
+    "                                        for hyperparam in hyperparams}\n",
+    "\n",
+    "    targets_with_bounds_and_desc = {target: {'description': description_per_var[target],\n",
+    "                                             'lb': lb_per_var[target],\n",
+    "                                             'ub': ub_per_var[target]}\n",
+    "                                    for target in targets}\n",
+    "\n",
+    "    hws_with_prices = {hw: {'default_price': price}\n",
+    "                       for hw, price in db.get_prices_per_hw(algorithm).items()}\n",
+    "\n",
+    "    ret = {'algorithm': algorithm,\n",
+    "           'hws': hws_with_prices,\n",
+    "           'hyperparameters': hyperparams_with_bounds_and_desc,\n",
+    "           'targets': targets_with_bounds_and_desc}\n",
+    "\n",
+    "    # alternative\n",
+    "    # ret = {'algorithm': algorithm,\n",
+    "    #       'hyperparameters': hyperparams,\n",
+    "    #       'targets': targets,\n",
+    "    #       'bounds': {'lb_per_var': lb_per_var,\n",
+    "    #                   'ub_per_var': ub_per_var}}\n",
+    "\n",
+    "    return jsonify(ret)\n",
+    "\n",
+    "\n",
+    "@app.route('/optimize', methods=['POST'])\n",
+    "def optimize():\n",
+    "    data = request.get_json()\n",
+    "    try:\n",
+    "        optimization_request = parse_request_json(data)\n",
+    "        solution = run_hada(optimization_request)\n",
+    "\n",
+    "        ret = {'solution': None}\n",
+    "        if solution:\n",
+    "            ret = {'solution': format_solution(solution)}\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        ret = {'error': str(e)}\n",
+    "\n",
+    "    return jsonify(ret)\n"
+   ]
   }
  ],
  "metadata": {
