removed core package

--- a/notebooks/sustainable-hardware-dimensioning.ipynb
+++ b/notebooks/sustainable-hardware-dimensioning.ipynb
@@ -764,9 +764,7 @@
    "id": "a3765b51-c0f7-4359-8b67-bfef726612b3",
    "metadata": {},
    "source": [
-    "Notice that the min for memPeak is 0.12. That's because the values for the memory peak consumption recorded on leonardo are strangely low, thus also bringing the average down. It is strange also because in the instance with memPeak 0.12, the average memory is higher, which shouldn’t be possible. The benchmark runs on Leonardo should have been repeated. Unfortunately, the recent weather emergency in Emilia-Romagna caused the interruptions of the HPC services offered by Cineca.\n",
-    "\n",
-    "Also, notice that we \"canada\" and \"quebec\" in many entries for the country and region. That's not because i travelled, even though i'd like to. That is something taken from codecarbon, so there should be some problem there when tracking emissions."
+    "Notice that the min for memPeak is 0.12. That's because the values for the memory peak consumption recorded on leonardo are strangely low, thus also bringing the average down. It is strange also because in the instance with memPeak 0.12, the average memory is higher, which shouldn’t be possible. The benchmark runs on Leonardo should have been repeated. Unfortunately, the recent weather emergency in Emilia-Romagna caused the interruptions of the HPC services offered by Cineca."
    ]
   },
   {
@@ -810,6 +808,14 @@
     "print(data['platform'].value_counts())\n",
     "print(data['country'].value_counts())\n",
     "print(data['region'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f429cde-d775-47cc-b9bb-f60d7e51a957",
+   "metadata": {},
+   "source": [
+    "Notice that we \"canada\" and \"quebec\" in many entries for the country and region. That's not because i travelled, even though i'd like to. That is something taken from codecarbon, so there should be some problem there when tracking emissions. The problem with these values is that they influence the way in which the carbon footprint is computed. That's because codecarbon uses data relative to the carbon intensity of a given country, so that could change the final result. For example, we have 4.31e-06 as emission rate for italy and 3.00e-08 for canada. Notice that we could also remove this column, since its values are fixed."
    ]
   },
   {
