basic notebook closed

--- a/notebooks/sustainable-hardware-dimensioning.ipynb
+++ b/notebooks/sustainable-hardware-dimensioning.ipynb
@@ -184,9 +184,21 @@
    "source": [
     "### Measuring Carbon Emissions\n",
     "\n",
-    "In order to extend HADA for taking into account sustainability, we need to measure the carbon emissions for running the algorithms during the benchmark phase. A simple tool to do so is [codecarbon](https://mlco2.github.io/codecarbon/index.html), which is a python package offering useful tools for tracking the emissions resulting from executing code execution.\n",
+    "In order to extend HADA for taking into account sustainability, we need to measure the **Carbon Emissions** (or **Carbon Footprint**) produced by running the algorithms during the benchmark phase.  The Carbon Footprint is expressed in terms of carbon dioxide equivalent $\\mathsf{CO_2e}$, and summarises the global warming effect of the Greenhouse Gases (GHG) emitted in the determined timeframe. To measure the Carbon Emissions we rely on [codecarbon](https://mlco2.github.io/codecarbon/index.html), which is a python package offering useful tools for tracking the emissions resulting from executing code execution. Codecarbon computes the Carbon Emissions ($\\mathsf{C}$) as:\n",
     "\n",
-    "The CO2e emission tracking tool offered by codecarbon can be used in [different modalities](https://mlco2.github.io/codecarbon/usage.html): as an Explicit Object (instantiating a EmissionsTracker object and pass it as a parameter to function calls to start and stop the emissions tracking of the compute section), as a Context Manager (recommended for monitoring a specific code block) or as a Decorator (recommended for monitoring training functions). For example, let's track the emissions of running the ANTICIPATE algorithm. Let's say we would like to solve instance 5 with 4 scenarios:"
+    "\\begin{equation}\n",
+    "    \\mathsf{C} = \\mathsf{E} \\times \\mathsf{CI}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Where:\n",
+    "* $\\mathsf{E}$ is the Energy consumed by the computational infrastructure, quantified as kilowatt-hours (kWh).\n",
+    "* $\\mathsf{CI}$ is the **Carbon Intensity** of the electricity consumed for computation, quantified as g of $\\mathsf{CO_2e}$ emitted per kilowatt-hour (kWh) of electricity.\n",
+    "\n",
+    "Codecarbon directly measures the energy consumption of the CPU, GPU and RAM on which the code is executed at intervals of 15 sec (by default, but it can also be modified).\n",
+    "\n",
+    "The CO2e emission tracking tool offered by codecarbon can be used in [different modalities](https://mlco2.github.io/codecarbon/usage.html): as an Explicit Object (instantiating a EmissionsTracker object and pass it as a parameter to function calls to start and stop the emissions tracking of the compute section), as a Context Manager (recommended for monitoring a specific code block) or as a Decorator (recommended for monitoring training functions). \n",
+    "\n",
+    "For example, let's track the emissions of running the ANTICIPATE algorithm. Let's say we would like to solve instance 5 with 4 scenarios:"
    ]
   },
   {
@@ -233,7 +245,7 @@
    "id": "11cb8ab5-e1a3-44d3-ba2b-0e659f5740b2",
    "metadata": {},
    "source": [
-    "This tracks the emissions of the `online_ant` function by using the codecarbon `EmissionTracker` as a context manager. By default, codecarbon saves the tracking data to a .csv file, named `emissions.csv`. Let's take a look:"
+    "This tracks the emissions of the `online_ant` function, which executes the ANTICIPATE algorithm, by using the codecarbon `EmissionTracker` as a context manager. By default, codecarbon saves the tracking data to a .csv file, named `emissions.csv`. Let's take a look:"
    ]
   },
   {
@@ -712,9 +724,9 @@
    "id": "c7b1ba2c-07e6-4534-8a9c-b9b7c13a00d4",
    "metadata": {},
    "source": [
-    "(**NOTE:** maybe a table is not the most suitable representation) As we can see, Codecarbon keeps track of a series of metrics. For this project, we decided to include the following metrics in the training set to generate:\n",
+    "As we can see, Codecarbon keeps track of a series of metrics. For this project, we decided to include the following metrics in the training set to generate:\n",
     "\n",
-    "* `emissions`: the total emissions of CO2eq (kg) (**NOTE:** add a brief explanation about how codecarbon computes the emissions);\n",
+    "* `emissions`: the total emissions of CO2eq (kg);\n",
     "* `emission_rate`: the amount of CO2eq emissions per second (kg/s);\n",
     "* `cpu_energy`: the energy consumed by the cpu;\n",
     "* `ram_energy`: the energy consumed by the ram;\n",
@@ -732,7 +744,11 @@
     "\n",
     "For the benchmarking phase, the ANTICIPATE and CONTINGECY algorithms were run on each instance 100 times, each time considering a different number of the configurable parameter (from 1 to 100 traces/scenarios). This value is taken directly from the HADA paper, according to which running the algorithms on each instance 100 times sufficiently explores the parameter space [Hada paper, 4]. Then, the training set of each algorithm will be of 3,000 records (100 runs x 30 instances). \n",
     "\n",
-    "Since for the HADA approach is recommended to collect data relative to different Hardware configurations, i executed the benchmarking phase on my personal laptop [Insert specifications], and on [Leonardo](https://leonardo-supercomputer.cineca.eu/), an HPC System hosted by CINECA. After the benchmark phase, the collected dataset will look something like this:"
+    "Since for the HADA approach is recommended to collect data relative to different Hardware configurations, i executed the benchmarking phase on my personal laptop [Insert specifications], and on [Leonardo](https://leonardo-supercomputer.cineca.eu/), an HPC System hosted by CINECA.\n",
+    "\n",
+    "[Add a description of the configuration steps for setting benchmark runs on Leonardo]\n",
+    "\n",
+    "After the benchmark phase, the collected dataset will look something like this:"
    ]
   },
   {
@@ -950,7 +966,7 @@
    "source": [
     "## Run HADA\n",
     "\n",
-    "It is time to run hada, we will use the pre-existing code"
+    "Now that we have the benchmark data comprehensive of the new metrics, we can use it within the HADA framework."
    ]
   },
   {
@@ -958,7 +974,9 @@
    "id": "c8120630-36f9-4e6c-94ba-3c90714a4e0d",
    "metadata": {},
    "source": [
-    "Before, it is necessary to set a configuration file for each algorithm. That is nothing but a .json for each combination of algorithm and hardware platform containing all the informations about the algorithms name, the hyperparameters and the targets, with indications of the type of variables and eventually upper and lower bounds for them. For example, the following is the configuration file for ANTICIPATE"
+    "Before that, it is necessary to set a configuration file for each algorithm. That is nothing but a `.json` for each combination of algorithm and hardware platform containing all the informations about the algorithms name, the hyperparameters and the targets, i.e. the metrics measured during the benchmark phase, with indications of the type of variables and eventually upper and lower bounds for them. \n",
+    "\n",
+    "For example, the following is the configuration file for ANTICIPATE."
    ]
   },
   {
@@ -1051,23 +1069,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "786f038e-c609-4f0c-b8e8-327373856a97",
+   "cell_type": "markdown",
+   "id": "496fd512-0c78-447e-9c1c-d3f9a816e98d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# move also this code to util.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "cfb141d9-0066-449c-a8d9-30ac4b208c06",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# move this code to util.py"
+    "The HADA framework will then train a set of Machine Learning models on the benchmark data. For both algorithm considered, a model will be created for each of the targets specified in the configuration file. The models are then embedded inside an optimization model."
    ]
   },
   {
@@ -1077,23 +1083,15 @@
    "source": [
     "### Optimization request\n",
     "\n",
-    "Now, we can test the model by submitting an optimization request in a json like format"
+    "Now, we can test the framework by submitting an optimization request in a json like format as the following."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "2aac7789-1fbf-407c-8adf-c0a1da8a2eff",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'solution': {'hw': 'mbp19', 'nScenarios': 1, 'sol(keuro)': 268.16766666666666, 'time(sec)': 197.53200000000004, 'memAvg(MB)': 344.46599999999995, 'CO2e(kg)': 5.3446599999997565e-06}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "request = {\n",
     "        \"algorithm\":\"anticipate\",\n",
@@ -1104,10 +1102,34 @@
     "            {'target': 'sol(keuro)', 'type': 'leq', 'value': 350},\n",
     "            {'target': 'memAvg(MB)', 'type': 'leq', 'value': 350}\n",
     "        ]\n",
-    "    }\n",
-    "\n",
-    "ret = optimize(request)\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a88270c-5e67-463a-9115-10eea4a11ea1",
+   "metadata": {},
+   "source": [
+    "This requires minimizing a specific target, in this case the CO2e emissions, while respecting some constraints on the computation time, the solution cost and the average memory used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "741c11ca-b286-4e5b-bad8-b3e24ea50bec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ret = util.optimize(request)\n",
     "print(ret)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21cb77e2-7422-4a74-9712-882eaea54c0f",
+   "metadata": {},
+   "source": [
+    "This returns the optimal configuration of the algorithm that satisfies the user imposed constraints."
    ]
   }
  ],
