added data analysis notebook

--- a/notebooks/sustainable-hardware-dimensioning.ipynb
+++ b/notebooks/sustainable-hardware-dimensioning.ipynb
@@ -44,7 +44,7 @@
    "id": "10a91681-7e62-40a9-b6b8-8d641791d19b",
    "metadata": {},
    "source": [
-    "# Case study: Sustainable Hardware Dimensioning\n",
+    "# Sustainable Hardware Dimensioning\n",
     "\n",
     "In this work, we explore the problem of finding the the best Hardware architecture and its Dimensioning for AI algorithms, while respecting constraints in terms of carbon emissions. An existing tool, named [HADA](https://www.sciencedirect.com/science/article/abs/pii/S0950705122005974) (HArdware Dimensioning of AI Algorithms)  has focused on the task of Hardware Dimensioning with constraints on budget, runtime and solution quality. We aim at extending this approach by also considering constraints on carbon emissions resulting from computations, and we name this problem Sustainable Hardware Dimensioning.\n",
     "\n",
@@ -64,7 +64,7 @@
     "\n",
     "The code implementing the two algorithms as well as the HADA tool has already been developed. In particular there is a version of HADA implemented as a Flask web application, that given the Data Sets of the target algorithms, it provides a user interface to select the algorithm, specify the obective and the constraints. Then, it creates the ML models under the hood, embeds them in the optimisation model, adds the user-defined constraints and solves the model for the required objective, namely the phases (2) and (3) described above.\n",
     "\n",
-    "(insert app picture)\n",
+    "\n",
     "\n",
     "Then, the focus of the current work is:\n",
     "\n",
@@ -263,6 +263,7 @@
     "\n",
     "* `emissions`: the total emissions of CO2eq (kg);\n",
     "* `emission_rate`: the amount of CO2eq emissions per second (kg/s);\n",
+    "* `memPeak(MB)`: the maximum amount of memory required by the algorithm (in MB);\n",
     "* `cpu_energy`: the energy consumed by the cpu;\n",
     "* `ram_energy`: the energy consumed by the ram;\n",
     "* `tot_energy`: the total energy consumed;\n",
@@ -459,7 +460,7 @@
     "\n",
     "For the benchmarking phase, the ANTICIPATE and CONTINGECY algorithms were run on each instance 100 times, each time considering a different number of the configurable parameter (from 1 to 100 traces/scenarios). This value is taken directly from the HADA paper, according to which running the algorithms on each instance 100 times sufficiently explores the parameter space. \n",
     "\n",
-    "Since for the HADA approach is recommended to collect data relative to different Hardware configurations, i executed the benchmarking phase on my personal laptop [Insert specifications], and on [Leonardo](https://leonardo-supercomputer.cineca.eu/), an HPC System hosted by CINECA. Then, the training set of each algorithm will be of 6,000 records (100 runs x 30 instances x 2 Hardware configurations).\n",
+    "Since for the HADA approach is recommended to collect data relative to different Hardware configurations, i executed the benchmarking phase on my personal laptop (A 2019 MacBook Pro), and on [Leonardo](https://leonardo-supercomputer.cineca.eu/), an HPC System hosted by CINECA. Then, the training set of each algorithm will be of 6,000 records (100 runs x 30 instances x 2 Hardware configurations).\n",
     "\n",
     "Since running both algorithms 100 times over each instance with a different hyperparameter value is a time consuming (and repetitive) task, it would be useful to have some automatioin. Therefore i have used a python script that allows you to specify the instances and the hyperparameter values to use as command line arguments"
    ]
@@ -469,7 +470,7 @@
    "id": "23ef364c-eb32-4d56-99f2-351ef97344fc",
    "metadata": {},
    "source": [
-    "**Benchmark on Leonardo**: The process to perform ANTICIPATE and CONTINGENCY on Leonardo presented some challenges. Both algorithms use the [Gurobi solver](https://www.gurobi.com/), and the process of figuring out how to use it was not straightforward, since it was not possible to install a license directly on the compute node where the algorithms would run. Therefore, this phase took quite some time to figure out the right way forward, and required the cooperation of CINECA staff and Gurobi's assistance. In the end, the solution was to install an *Academic Floating License* on the CINECA License Server, and use a Client License to connect to the server where the license resides once the solver is run."
+    "**Benchmark on Leonardo**: The process to execute ANTICIPATE and CONTINGENCY on Leonardo presented some challenges. Both algorithms use the [Gurobi solver](https://www.gurobi.com/), and the process of figuring out how to use it was not straightforward, since it was not possible to install a license directly on the compute node where the algorithms would run. Therefore, this phase took quite some time to figure out the right way to proceed, and required the cooperation of CINECA staff and Gurobi's assistance. In the end, the solution was to install an *Academic Floating License* on the CINECA License Server, and use a Client License to connect to the server where the license resides once the solver is run."
    ]
   },
   {
@@ -862,6 +863,38 @@
    "source": [
     "ret = util.optimize(request)\n",
     "print(ret)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cf2284a-c30f-41af-9879-1496149f11ef",
+   "metadata": {},
+   "source": [
+    "### HADA UI\n",
+    "\n",
+    "This is also what happens in the HADA web application. Here's what the user interface of HADA looks like after updating the code with the new targets\n",
+    "\n",
+    "![HADA UI](assets/hada-ui.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04159c3d-479e-4b74-9b6c-a617a305f9bb",
+   "metadata": {},
+   "source": [
+    "By using the interface, we can easily send an optimisation request\n",
+    "\n",
+    "![optreq](assets/hada-optimisation-request.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40e3a1f7-3e28-45ff-b323-32787e86f104",
+   "metadata": {},
+   "source": [
+    "And obtain a solution:\n",
+    "\n",
+    "![solution](assets/hada-solution.png)"
    ]
   },
   {
